# python-lessons

./: .gitignore  1.py  2.py  3.py  4.py  Mini_quiz.py  Python Data Types.py  PythonOperators.py  abstractmethod.py  bot.py  bot_.py  bot_copy.py  bot_parse_weather_news.py  calculator.py  course_manager.py  covid.py  daybook.py  errors.py  game.py  homework10.py  homework11.py  homework12.py  homework13.py  homework14.py  homework15.py  homework2.py  homework3.py  homework4.py  homework5.py  homework6.py  homework8.py  homework9.py  homtwork13.py  lesson1.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py  lessons10_Functions.py  lessons10_Sets.py  (+60 more)
EX/: analysis.py  cor_price.py  crud_operations.py  main_app.py
datasets/: house_rent_2024 (1).csv  house_rent_2024.csv  house_rent_2024.sql  titanic.csv
files/: input.txt  questions.json  results.json
rental_house/: analysis.py  api.py  bookings.csv  bookings_old.csv  calendar.csv  capex.csv  clients.csv  copy_csv_sql.py  cor_price.py  db.py  db_setup.py  main.py  operations.py  opex.csv  pricing.csv  pyproject.toml
