[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rental-house"
version = "0.1.0"
description = "CLI utilities and analytics for a rental house database (SQLite)."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0,<3.0",
  "flask>=3.0,<4.0"
]

[project.urls]
Homepage = "https://example.com/rental-house"
